[package]
name = "teeracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
rand = "0.8.4"
rand_distr = "0.4.2"
indicatif = "0.16.2"
num-traits = "0.2.14"
rand_xorshift = "0.3.0"
rayon = "1.5.1"
crossbeam = "0.8.1"